--- a/frontend-bar/src/app/components/event/list-event/list-event.component.css
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.css
@@ -125,3 +125,16 @@
     border-top:  2px solid black;
     border-left:  2px solid black;
 }
+
+
+
+/*styles for general pague*/
+ .add {
+    background-color: #3A0709;
+    color: white;
+    font-weight: bolder;
+    font-size: 18px;
+    border: 2px solid white;
+    border-radius: 10px;
+    position: inherit;
+ }
