--- a/frontend-bar/src/app/components/landing/structure/structure.component.css
+++ b/frontend-bar/src/app/components/landing/structure/structure.component.css
@@ -1376,6 +1376,107 @@ h3 {
   font-size: 14px;
 }
 
+.products{
+  width: 100%;
+  height: 400px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  background: linear-gradient(90deg, rgba(252,221,217,1) 59%, rgba(252,226,212,1) 81%, rgba(251,233,211,1) 93%, rgba(253,234,213,1) 100%);
+}
+
+.list_products{
+  width: 185px;
+  height: 250px;
+  background-color: #ffffff80;
+  border-radius: 35px;
+  border: 1px dotted rgb(179, 179, 179); 
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+.list_products:hover{
+  transform: scale(1.009);
+  transition: 0.1s;
+}
+.image_product{
+  width: 100%;
+  height: 70%;
+  overflow: hidden;
+}
+.image_product img{
+  width: 100%;
+  height: 100%;
+  image-rendering: auto;
+  object-fit: scale-down;
+  
+}
+.name_produc p{
+  margin: 2px 0 0 5px !important;
+  font-family: "Skranji", system-ui !important;
+  font-weight: bolder;
+  font-size: 13px;
+}
+.value_product p{
+  margin: 2px 0 0 5px !important;
+  font-family: "Skranji", system-ui !important;
+  font-weight: bolder;
+  font-size: 13px;
+}
+.about_us{
+  height: 300px;
+  width: 100%;
+  display: flex;
+}
+.image_about{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.image_about img{
+    height: 50%;
+    object-fit: scale-down;
+    position: absolute;
+    rotate: 6deg;
+    margin-top: 80px;
+}
+.information_about{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+.information_about #body{
+    width: 80%;
+    font-weight: 600;
+    font-family: system-ui;
+    height: auto !important;
+    box-sizing: border-box;
+    text-align: justify;
+    font-size: 18px;
+    margin: 0 !important;
+}
+.information_about #title{
+    color: #3A0709;
+    font-weight: bold;
+    display: inline;
+    font-family: "Skranji", system-ui !important;
+    font-weight: 400 !important;
+    font-size: 3em;
+    margin: 0 !important;
+}
+
+.banner{
+  height: 350px;
+  background: linear-gradient(90deg, rgba(252,221,217,1) 59%, rgba(252,226,212,1) 81%, rgba(251,233,211,1) 93%, rgba(253,234,213,1) 100%);
+  margin-top: -16px;
+  overflow: hidden;
+}
 @media screen and (min-width: 200px) and (max-width: 320px) {
   .about_bar {
     height: 400px;
@@ -1716,95 +1817,3 @@ h3 {
 
 
 
-
-
-
-.section_products {
-  height: 340px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.slider {
-  width: 890px;
-  display: flex;
-  position: relative;
-  justify-content: start;
-  align-items: center;
-  overflow: hidden;
-  padding: 20px ;
-  /* Padding horizontal */
-}
-
-.product_ {
-  -webkit-box-shadow: 0px 0px 10px 0px rgba(102,102,102,1);
-  -moz-box-shadow: 0px 0px 10px 0px rgba(102,102,102,1);
-  box-shadow: 0px 0px 10px 0px rgba(102,102,102,1);
-  border-radius: 15px;
-  width: 160px;
-  height: 250px;
-  background-color: transparent;
-  margin-right: 60px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  transition: 1s;
-  flex-shrink: 0;
-  background-color: #ffffff;
-  border: 1px solid rgba(128, 128, 128, 0.589);
-}
-
-.image_product {
-  width: 100%;
-  height: 50% !important;
-  background-color: transparent;
-}
-
-.image_product img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.information_product {
-  width: 100%;
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.information_product .title, .price{
-  font-family: "Acumin Variable Concept";
-  font-weight: 600;
-  font-size: 13px;
-}
-
-.slider .arrows {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
- margin-left: -4% ;
-  position: absolute;
-  top: 40%;
-  padding: 0 20px;
-  /* Padding horizontal */
-}
-
-.slider .arrows button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 35px;
-  height: auto;
-  border-radius: 50%;
-  border: 2px solid #3A0709;
-  background-color: #3A0709;
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-  margin: 0 10px;
-}
