--- a/frontend-bar/src/app/components/landing/structure/structure.component.html
+++ b/frontend-bar/src/app/components/landing/structure/structure.component.html
@@ -3,7 +3,13 @@
 <div class="banner">
   <div class="text_info">
       <div class="text_h">
-          <p class="design1"></p>
+          <p  id="design1">{{ "cold" | translate}}</p>
+          <p  id="design1">{{ "cold" | translate}}</p>
+          <p  id="design2">{{ "cold2" | translate}}</p>
+          <p  id="design3">{{ "cold" | translate}}</p>
+          <p  id="design1">{{ "cold" | translate}}</p>
+          <p  id="design1">{{ "cold" | translate}}</p>
+          <p  id="design1">{{ "cold" | translate}}</p>
       </div>
   </div>
   <div class="images_info">
