--- a/frontend-bar/src/app/components/landing/structure/structure.component.html
+++ b/frontend-bar/src/app/components/landing/structure/structure.component.html
@@ -6,6 +6,7 @@
           <p  id="design1">{{ "cold" | translate}}</p>
           <p  id="design1">{{ "cold" | translate}}</p>
           <p  id="design2">{{ "cold2" | translate}}</p>
+          <p  id="design4">{{ "banner" | translate}}</p>
           <p  id="design3">{{ "cold" | translate}}</p>
           <p  id="design1">{{ "cold" | translate}}</p>
           <p  id="design1">{{ "cold" | translate}}</p>
@@ -14,7 +15,9 @@
   </div>
   <div class="images_info">
     <div class="back">
-        <img src="" alt="">
+        <div class="image_back">
+          <img src="../../../../assets/img/Back-gorunds/womanBanner.png" alt="woman.png">
+        </div>
     </div>
   </div>
 </div>
@@ -27,9 +30,11 @@
     <p id="body">{{ "aboutUs" | translate}}</p>
   </div>
 </div>
+
 <div class="products">
   <div class="list_products" class="list_products">
     <div class="image_product">
+      
       <img src="../../../../assets/img/products/Poker.png" alt="product">
     </div>
     <div class="name_produc">
