--- a/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
+++ b/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
@@ -20,7 +20,7 @@
 <div class="option_container_menu">
     <a href="HollowBar-initial/client"> {{"home" | translate}}</a>
     <a href="#">  {{"contactUs" | translate }}</a>
-    
+    <a href="#"> {{"events" | translate }}</a>
     <div class="language-buttons_h">
         <button (click)="es()" class="es">ES</button>
         <button (click)="en()" class="en">EN</button>
