--- a/frontend-bar/src/app/components/landing/structure/structure.component.css
+++ b/frontend-bar/src/app/components/landing/structure/structure.component.css
@@ -1743,6 +1743,63 @@ h3 {
     margin-bottom: 1em;
     font-size: 11px;
   }
+  .text_h{
+    margin-left: 3%;
+  }
+  #design2, #design1, #design3{
+    font-size: 1em;
+  }
+  #design4{
+    font-size: 12px;
+    margin-left: 11% !important;
+    width: 112px;
+    text-align: start;
+  }
+  .banner{
+    height: 235px;
+  }
+ .image_back{
+  width: 100%;
+ }
+ .image_back img{
+  margin-left: 0% !important;
+ }
+ .image_about img{
+  height: 30%;
+ }
+ #body{
+    width: 95% !important;
+    text-align: justify;
+    font-size: 10px !important;
+ }
+ .image_about{
+  width: 40%;
+  
+ }
+ .image_about img{
+  margin-top: 35px;
+ }
+ #title{
+  font-size: 1.3em !important;
+ }
+ .about_us{
+  height: 190px;
+ }
+ .products{
+  height: auto;
+  padding: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
+ }
+ .list_products{
+  width: 110px;
+  height: 120px;
+ }
+ .list_products p{
+  font-size: 8px;
+ }
+
 }
 
 @media screen and (min-width: 521px) and (max-width: 720px) {
@@ -1820,6 +1877,64 @@ h3 {
     margin-bottom: 1em;
     font-size: 11px;
   }
+  .list_products{
+    width: 150px;
+    height: 180px;
+  }
+  .products{
+    height: auto;
+    flex-wrap: wrap;
+    gap: 15px;
+    padding: 20px;
+  }
+  .name_produc p{
+    font-size: 11px;
+  }
+  .value_product p{
+    font-size: 11px;
+  }
+  #title{
+    font-size: 2em !important;
+  }
+  .image_back img{
+    margin-left: 15%;
+  }
+  .image_back{
+    width: 100%;
+  }
+  .text_h{
+    margin-left: 5%;
+  }
+  #design4{
+    font-size: 14px;
+    font-weight: 500;
+    margin-left: 100px !important;
+    width: 205px;
+  }
+  #design3, #design2{
+    font-size: 2em;
+    width: 250%;
+  }
+  #design1{
+    font-size: 2.2em;
+  }
+  .banner{
+    height: 325px;
+  }
+  .image_about img{
+    height: 40%;
+    object-fit: scale-down;
+    position: absolute;
+    rotate: 6deg;
+    margin-top: 100px;
+}
+  #body{
+    width: 90% !important;
+    font-size: 14px !important;
+  }
+  .about_us{
+    height: 270px;
+  }
 }
 
 @media screen and (min-width: 721px) and (max-width: 1024px) {
@@ -1885,8 +2000,54 @@ h3 {
     margin-bottom: 1em;
     font-size: 12px;
   }
+  .list_products{
+    width: 150px;
+    height: 180px;
+  }
+  .products{
+    height: auto;
+    flex-wrap: wrap;
+    gap: 15px;
+    padding: 20px;
+  }
+  .name_produc p{
+    font-size: 11px;
+  }
+  .value_product p{
+    font-size: 11px;
+  }
+  #title{
+    font-size: 2.3em !important;
+  }
+  .image_back img{
+    margin-left: 0%;
+  }
+  .text_h{
+    margin-left: 10%;
+  }
+  #design4{
+    font-size: 16px;
+    font-weight: 500;
+    margin-left: 135px !important;
+    width: 235px;
+  }
+  #design3, #design2{
+    width: 220% !important;
+    font-size: 2.5em;
+  }
+  #design1{
+    font-size: 2.8em;
+  }
 }
 
+@media screen and (min-width: 1025px) and (max-width: 1400px ) {
+  .products{
+    gap: 1%;
+  }
+  .products p{
+    font-size: 11px;
+  }
+}
 
 
 
