--- a/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
+++ b/frontend-bar/src/app/components/landing/land-nav/land-nav.component.html
@@ -2,7 +2,7 @@
     
     <div class="option_container">
         <a href="hollowbar-initial/client"> {{"home" | translate}}</a>
-        <a href="#"> {{"contactUs" | translate }}</a>
+        <a (click)="navigateToFooter()"> {{"contactUs" | translate }}</a>
         <a href="#"> {{"events" | translate }}</a>
     </div>
     <div class="language-buttons">
