--- a/frontend-bar/src/app/components/user/list/list.component.html
+++ b/frontend-bar/src/app/components/user/list/list.component.html
@@ -1,5 +1,57 @@
 <app-navbar></app-navbar>
-<div class="container mt-2 text-center">
+
+<div class="mat-elevation-z8">
+    <!-- Button Add -->
+    <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput #input (keyup)="eventFilter($event)">
+    </mat-form-field>
+    <button (click)="addUser()" mat-flat-button color="primary">{{ "add" | translate }}</button>
+
+    <table mat-table [dataSource]="dataSource" matSort>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "name" | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
+
+        <!-- Email Column -->
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef>{{ "email" | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+        </ng-container>
+
+        <!-- Status Column -->
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>{{ "status" | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+        </ng-container>
+
+        <!-- Rol Column -->
+        <ng-container matColumnDef="rol">
+            <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{ element.rol }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon (click)="addUser(element.id)" class="btn-edit"
+                    matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
+                <mat-icon (click)="deleteUser(element.id)" class="btn-delete"
+                    matTooltip="{{ 'delete' | translate }} {{ element.name }}">delete</mat-icon>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+</div>
+
+<!-- <div class="container mt-2 text-center">
     <h2>Usuarios</h2>
     <table class="table table-striped">
         <thead>
@@ -19,4 +71,4 @@
             </tr>
         </tbody>
     </table>
-</div>
+</div> -->
