--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -1,70 +1,52 @@
 <app-navbar></app-navbar>
 
+<div class="mat-elevation-z8">
+    <!-- Button Add -->
+    <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput #input (keyup)="eventFilter($event)">
+    </mat-form-field>
+    <button (click)="addUser()" mat-flat-button color="primary">{{ "add" | translate }}</button>
 
+    <table mat-table [dataSource]="dataSource" matSort>
 
-<h1>{{ "events" | translate }}</h1>
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "name" | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        </ng-container>
 
-    <button class="btn add" routerLink="/event/insert"> + </button>
+        <!-- Email Column -->
+        <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef>{{ "email" | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+        </ng-container>
 
+        <!-- Status Column -->
+        <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>{{ "status" | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+        </ng-container>
 
+        <!-- Rol Column -->
+        <ng-container matColumnDef="rol">
+            <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{ element.rol }}</td>
+        </ng-container>
 
-<div class="Table_events">
+        <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon (click)="addUser(element.id)" class="btn-edit"
+                    matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
+                <mat-icon (click)="deleteUser(element.id)" class="btn-delete"
+                    matTooltip="{{ 'delete' | translate }} {{ element.name }}">delete</mat-icon>
+            </td>
+        </ng-container>
 
-    <label for="search">Buscar por nombre</label>
-    <input type="text" [(ngModel)]="searchTerm" id="search" class="search">
-
-    <table class="table" id="table information">
-        <thead>
-            <tr>
-                <th scope="col">Id</th>
-                <th scope="col">{{ "name" | translate }}</th>
-                <th scope="col">{{ "date" | translate }}</th>
-                <th scope="col">{{ "actions" | translate }}</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let event of listEvent; let i=index"
-                [hidden]="event.name_event?.toLowerCase()?.indexOf(searchTerm.toLowerCase()) === -1">
-                <td>{{ counter + i }}</td>
-                <td>{{ event.name_event }}</td>
-                <td>{{ event.date | date: 'short' }}</td>
-                <td>
-                    <div id="buttonContainer">
-                        <button class="openButton btn btn-info" (click)="selectEventId(event.id)">{{ "edit" |
-                            translate}}</button>
-                        <button class="btn btn-secondary" (click)="deleteEvent(event.id)">{{ "delete" | translate
-                            }}</button>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
 </div>
-
-
-
-
-<div id="card">
-    <form [formGroup]="form" (ngSubmit)="updateEvent()" class="form_up">
-        <div class="title">
-            <h2>Editar Evento</h2>
-        </div>
-        <div *ngIf="listEventId.length > 0" class="information_event">
-            <input type="hidden" formControlName="id" [value]="listEventId[0].id">
-            <div class="body_section">
-                <label>{{ "name" | translate }}:</label>
-                <input type="text" formControlName="name_event" [value]="listEventId[0].name_event">
-            </div>
-            <div class="body_section">
-                <label>{{ "date" | translate }}:</label>
-                <input type="datetime-local" formControlName="date" [value]="listEventId[0].date" id="date_format">
-            </div>
-        </div>
-        <div class="options_button">
-            <button type="submit" class="acceptButton">{{ "accept" | translate }}</button>
-            <button type="button" class="closeButton">{{ "cancel" | translate }}</button>
-        </div>
-    </form>
-</div>
-
-<app-footer></app-footer>
