--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
     <div class="option_container">
         <a href="hollowbar-initial/client"> {{"users" | translate}}</a>
-        <a href="/user"> {{"products" | translate }}</a>
+        <a href="/users"> {{"products" | translate }}</a>
         <a href="/event"> {{"events" | translate }}</a>
         <a (click)="logOut()">{{"exit" | translate}}</a>
     </div>
@@ -18,13 +18,12 @@
     
 </nav>
 <div class="option_container_menu">
-    <a href="hollowbar-initial/client"> {{"users" | translate}}</a>
+    <a href="/users"> {{"users" | translate}}</a>
     <a href="#"> {{"products" | translate }}</a>
-    <a href="/events"> {{"events" | translate }}</a>
+    <a href="/event"> {{"events" | translate }}</a>
     <a (click)="logOut()">{{"exit" | translate}}</a>
     <div class="language-buttons_h">
         <button (click)="es()" class="es">ES</button>
         <button (click)="en()" class="en">EN</button>
     </div>  
-   
 </div>
