--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -1,7 +1,7 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar>
 
 <div class="mat-elevation-z8">
-    <!-- Button Add -->
+
     <mat-form-field>
         <mat-label>Filter</mat-label>
         <input matInput #input (keyup)="eventFilter($event)">
@@ -10,25 +10,23 @@
 
     <table mat-table [dataSource]="dataSource" matSort>
 
-        <!-- Name Column -->
+       
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "name" | translate }}</th>
             <td mat-cell *matCellDef="let element">{{ element.name }}</td>
         </ng-container>
 
-        <!-- Email Column -->
+     
         <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef>{{ "email" | translate }}</th>
             <td mat-cell *matCellDef="let element">{{ element.email }}</td>
         </ng-container>
 
-        <!-- Status Column -->
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef>{{ "status" | translate }}</th>
             <td mat-cell *matCellDef="let element">{{ element.status }}</td>
         </ng-container>
 
-        <!-- Rol Column -->
         <ng-container matColumnDef="rol">
             <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
             <td mat-cell *matCellDef="let element">{{ element.rol }}</td>
@@ -49,4 +47,4 @@
     </table>
 
     <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
-</div>
+</div> -->
