--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -6,41 +6,29 @@
         <mat-label>Filter</mat-label>
         <input matInput #input (keyup)="eventFilter($event)">
     </mat-form-field>
-    <button (click)="addUser()" mat-flat-button color="primary">{{ "add" | translate }}</button>
+    <button (click)="addEvent()" mat-flat-button color="primary">{{ "add" | translate }}</button>
 
     <table mat-table [dataSource]="dataSource" matSort>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "name" | translate }}</th>
-            <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+        <!-- Name Event Column -->
+        <ng-container matColumnDef="name_event">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameEvent" | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{ element.name_event }}</td>
         </ng-container>
 
-        <!-- Email Column -->
-        <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef>{{ "email" | translate }}</th>
-            <td mat-cell *matCellDef="let element">{{ element.email }}</td>
-        </ng-container>
-
-        <!-- Status Column -->
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>{{ "status" | translate }}</th>
-            <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-        </ng-container>
-
-        <!-- Rol Column -->
-        <ng-container matColumnDef="rol">
-            <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
-            <td mat-cell *matCellDef="let element">{{ element.rol }}</td>
+        <!-- Date Column -->
+        <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef>{{ "dateEvent" | translate }}</th>
+            <td mat-cell *matCellDef="let element">{{ element.date }}</td>
         </ng-container>
 
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-                <mat-icon (click)="addUser(element.id)" class="btn-edit"
-                    matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
-                <mat-icon (click)="deleteUser(element.id)" class="btn-delete"
-                    matTooltip="{{ 'delete' | translate }} {{ element.name }}">delete</mat-icon>
+                <mat-icon (click)="addEvent(element.id)" class="btn-edit"
+                    matTooltip="{{ 'edit' | translate }} {{ element.nameEvent }}">edit</mat-icon>
+                <mat-icon (click)="deleteEvent(element.id)" class="btn-delete"
+                    matTooltip="{{ 'delete' | translate }} {{ element.nameEvent }}">delete</mat-icon>
             </td>
         </ng-container>
 
