--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar">
     <div class="option_container">
-        <a href="hollowbar-initial/client"> {{"users" | translate}}</a>
-        <a href="/users"> {{"products" | translate }}</a>
-        <a href="/event"> {{"events" | translate }}</a>
+        <a href="/users"> {{"users" | translate}}</a>
+        <a href="/events"> {{"events" | translate }}</a>
         <a (click)="logOut()">{{"exit" | translate}}</a>
     </div>
     <div class="language-buttons">
@@ -19,8 +18,7 @@
 </nav>
 <div class="option_container_menu">
     <a href="/users"> {{"users" | translate}}</a>
-    <a href="#"> {{"products" | translate }}</a>
-    <a href="/event"> {{"events" | translate }}</a>
+    <a href="/events"> {{"events" | translate }}</a>
     <a (click)="logOut()">{{"exit" | translate}}</a>
     <div class="language-buttons_h">
         <button (click)="es()" class="es">ES</button>
