--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -1,4 +1,4 @@
-<!-- <app-navbar></app-navbar>
+<app-navbar></app-navbar>
 
 <div class="mat-elevation-z8">
 
@@ -19,7 +19,7 @@
         <!-- Date Column -->
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef>{{ "dateEvent" | translate }}</th>
-            <td mat-cell *matCellDef="let element">{{ element.date }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.date | date:'dd/MM/yyyy HH:mm:ss' }}</td>
         </ng-container>
 
         <ng-container matColumnDef="action">
@@ -37,4 +37,4 @@
     </table>
 
     <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
-</div> -->
+</div>
