--- a/frontend-bar/src/app/components/user/add-or-edit-user/add-or-edit-user.component.html
+++ b/frontend-bar/src/app/components/user/add-or-edit-user/add-or-edit-user.component.html
@@ -12,7 +12,7 @@
                 <input formControlName="name" matInput>
             </mat-form-field>
             <div class="error">
-                <mat-error *ngIf="form.get('name')?.hasError('required') && form.get('name')?.touched">{{ "requiredUser"
+                <mat-error *ngIf="form.get('name')?.hasError('required') && form.get('name')?.touched">{{ "requiredNameUser"
                     | translate }}</mat-error>
             </div>
 
