--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -1,40 +1,43 @@
 <app-navbar></app-navbar>
+<section>
 
-<div class="mat-elevation-z8">
+    <div class="mat-elevation-z8">
+        <div class="search_add">
+            <mat-form-field>
+                <mat-label>Filter</mat-label>
+                <input matInput #input (keyup)="eventFilter($event)">
+            </mat-form-field>
+            <button (click)="addEvent()" mat-flat-button color="primary"><mat-icon>add</mat-icon></button>
+        </div>
 
-    <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput #input (keyup)="eventFilter($event)">
-    </mat-form-field>
-    <button (click)="addEvent()" mat-flat-button color="primary">{{ "add" | translate }}</button>
+        <table mat-table [dataSource]="dataSource" matSort>
 
-    <table mat-table [dataSource]="dataSource" matSort>
+            <!-- Name Event Column -->
+            <ng-container matColumnDef="name_event">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameEvent" | translate }}</th>
+                <td mat-cell *matCellDef="let element">{{ element.name_event }}</td>
+            </ng-container>
 
-        <!-- Name Event Column -->
-        <ng-container matColumnDef="name_event">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameEvent" | translate }}</th>
-            <td mat-cell *matCellDef="let element">{{ element.name_event }}</td>
-        </ng-container>
+            <!-- Date Column -->
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef>{{ "dateEvent" | translate }}</th>
+                <td mat-cell *matCellDef="let element">{{ element.date | date:'dd/MM/yyyy HH:mm:ss' }}</td>
+            </ng-container>
 
-        <!-- Date Column -->
-        <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef>{{ "dateEvent" | translate }}</th>
-            <td mat-cell *matCellDef="let element">{{ element.date | date:'dd/MM/yyyy HH:mm:ss' }}</td>
-        </ng-container>
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-icon (click)="addEvent(element.id)" class="btn-edit"
+                        matTooltip="{{ 'edit' | translate }} {{ element.nameEvent }}">edit</mat-icon>
+                    <mat-icon (click)="deleteEvent(element.id)" class="btn-delete"
+                        matTooltip="{{ 'delete' | translate }} {{ element.nameEvent }}">delete</mat-icon>
+                </td>
+            </ng-container>
 
-        <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-                <mat-icon (click)="addEvent(element.id)" class="btn-edit"
-                    matTooltip="{{ 'edit' | translate }} {{ element.nameEvent }}">edit</mat-icon>
-                <mat-icon (click)="deleteEvent(element.id)" class="btn-delete"
-                    matTooltip="{{ 'delete' | translate }} {{ element.nameEvent }}">delete</mat-icon>
-            </td>
-        </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
-</div>
+        <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
+    </div>
+</section>
