--- a/frontend-bar/src/app/components/user/list-user/list-user.component.html
+++ b/frontend-bar/src/app/components/user/list-user/list-user.component.html
@@ -4,7 +4,7 @@
         <div class="search_add">
             <!-- Button Add -->
             <mat-form-field>
-                <mat-label>Filter</mat-label>
+                <mat-label>{{ "filter" | translate }}</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
             <button (click)="addUser()" mat-flat-button color="primary">
@@ -39,7 +39,7 @@
             </ng-container>
 
             <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
+                <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let element" id="tdaction">
                     <mat-icon (click)="addUser(element.id)" class="btn-edit"
                         matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
@@ -54,26 +54,4 @@
 
         <mat-paginator [pageSizeOptions]="[10, 15, 20]"></mat-paginator>
     </div>
-
-    <!-- <div class="container mt-2 text-center">
-        <h2>Usuarios</h2>
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">Rol</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let user of listUser">
-                    <th>{{ user.name }}</th>
-                    <th>{{ user.email }}</th>
-                    <th>{{ user.status }}</th>
-                    <th>{{ user.rol }}</th>
-                </tr>
-            </tbody>
-        </table>
-    </div> -->
 </section>
