--- a/frontend-bar/src/app/components/table/list-table/list-table.component.html
+++ b/frontend-bar/src/app/components/table/list-table/list-table.component.html
@@ -8,7 +8,7 @@
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
             <button (click)="addTable()" mat-flat-button color="primary">
-                <mat-icon class="btn-delete">person_add</mat-icon>
+                <mat-icon class="btn-delete">add</mat-icon>
             </button>
         </div>
 
@@ -32,9 +32,9 @@
                 <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element" id="tdaction">
                     <mat-icon (click)="addTable(element.id)" class="btn-edit"
-                        matTooltip="{{ 'edit' | translate }} {{ element.name }}">edit</mat-icon>
+                        matTooltip="{{ 'edit' | translate }} {{ element.name_table }}">edit</mat-icon>
                     <mat-icon (click)="deleteUser(element.id)" class="btn-delete"
-                        matTooltip="{{ 'delete' | translate }} {{ element.name }}" >delete</mat-icon>
+                        matTooltip="{{ 'delete' | translate }} {{ element.name_table }}" >delete</mat-icon>
                 </td>
             </ng-container>
 
