--- a/frontend-bar/src/app/components/products/list-product/list-product.component.html
+++ b/frontend-bar/src/app/components/products/list-product/list-product.component.html
@@ -10,7 +10,7 @@
             </mat-form-field>
             <!-- <button (click)="addUser()" mat-flat-button color="primary">{{ "add" | translate }}</button> -->
             <button (click)="addProduct()" mat-flat-button color="primary">
-                <mat-icon class="btn-delete">person_add</mat-icon>
+                <mat-icon class="btn-delete">add</mat-icon>
             </button>
         </div>
 
@@ -18,35 +18,35 @@
 
             <!-- Name Product Column -->
             <ng-container matColumnDef="name_product">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "name" | translate }}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "name product" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.name_product }}</td>
             </ng-container>
 
             <!-- Image Column -->
             <ng-container matColumnDef="image">
-                <th mat-header-cell *matHeaderCellDef>{{ "email" | translate }}</th>
+                <th mat-header-cell *matHeaderCellDef>{{ "image" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.image }}</td>
             </ng-container>
 
             <!-- Price Column -->
             <ng-container matColumnDef="price">
-                <th mat-header-cell *matHeaderCellDef>{{ "status" | translate }}</th>
+                <th mat-header-cell *matHeaderCellDef>{{ "price" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.price }}</td>
             </ng-container>
 
             <!-- Stock Column -->
             <ng-container matColumnDef="stock">
-                <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
+                <th mat-header-cell *matHeaderCellDef>{{ "stock" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.stock }}</td>
             </ng-container>
 
             <ng-container matColumnDef="status">
-                <th mat-header-cell *matHeaderCellDef>{{ "rol" | translate }}</th>
-                <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+                <th mat-header-cell *matHeaderCellDef>{{ "status" | translate }}</th>
+                <td mat-cell *matCellDef="let element">{{ element.id_status }}</td>
             </ng-container>
 
             <ng-container matColumnDef="action">
-                <th mat-header-cell *matHeaderCellDef> </th>
+                <th mat-header-cell *matHeaderCellDef>{{ "actions" | translate }}</th>
                 <td mat-cell *matCellDef="let element" id="tdaction">
                     <mat-icon (click)="addProduct(element.id)" class="btn-edit"
                         matTooltip="{{ 'edit' | translate }} {{ element.name_product }}">edit</mat-icon>
