--- a/frontend-bar/src/app/components/products/add-or-edit-product/add-or-edit-product.component.css
+++ b/frontend-bar/src/app/components/products/add-or-edit-product/add-or-edit-product.component.css
@@ -13,7 +13,7 @@ input.example-right-align::-webkit-inner-spin-button {
 }
 
 input.example-right-align {
-    -moz-appearance: textfield;
+    text-align: right;
 }
 
 .form_group {
