--- a/frontend-bar/src/app/components/table/list-table/list-table.component.html
+++ b/frontend-bar/src/app/components/table/list-table/list-table.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<h1 class="title">{{ "navTable" | translate }}</h1>
 <section>
     <div class="mat-elevation-z8">
         <div class="search_add">
