--- a/frontend-bar/src/app/components/user/list-user/list-user.component.html
+++ b/frontend-bar/src/app/components/user/list-user/list-user.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
+
+<h1 class="title">{{ "navUser" | translate }}</h1>
 <section>
     <div class="mat-elevation-z8">
         <div class="search_add">
