--- a/frontend-bar/src/app/components/event/list-event/list-event.component.css
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.css
@@ -1,6 +1,11 @@
 table {
     width: 100%;
 }
+.title{
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+}
 .search_add{
     display: flex;
     height: 80px;
