--- a/frontend-bar/src/app/components/products/add-or-edit-product/add-or-edit-product.component.css
+++ b/frontend-bar/src/app/components/products/add-or-edit-product/add-or-edit-product.component.css
@@ -2,6 +2,10 @@
     margin-left: 1rem;
     /* or whatever margin you require */
 }
+.image_product{
+    display: flex;
+    flex-direction: column;
+}
 
 .example-right-align {
     text-align: right;
