--- a/frontend-bar/src/app/components/products/add-or-edit-product/add-or-edit-product.component.html
+++ b/frontend-bar/src/app/components/products/add-or-edit-product/add-or-edit-product.component.html
@@ -1,6 +1,6 @@
 <div class="container-tittleadduser">
     <mat-spinner [diameter]="30" *ngIf="loading"></mat-spinner>
-    <h2 mat-dialog-title id="t">{{ operation }} {{ "user" | translate }}</h2>
+    <h2 mat-dialog-title id="t">{{ operation }} {{ "navProduct" | translate }}</h2>
 </div>
 <form [formGroup]="form" (ngSubmit)="addProduct()">
     <mat-dialog-content class="mat-typography">
@@ -16,13 +16,15 @@
             </div>
 
             <!-- Image Input -->
-            <div>
+            <div class="image_product">
                 <mat-label>{{ "imageProduct" | translate }}</mat-label>
-                <button type="button" mat-raised-button (click)="fileInput.click()">{{ "chooseImage" | translate }}</button>
-                <input hidden (change)="onFileSelected($event)" #fileInput type="file" formControlName="image" accept="image/*">
-                <span class="file-name">{{ selectedFile?.name }}</span>
-                <div class="error">
+                <div>
+                    <button type="button" mat-raised-button (click)="fileInput.click()">{{ "chooseImage" | translate }}</button>
+                    <input hidden (change)="onFileSelected($event)" #fileInput type="file" formControlName="image" accept="image/*">
+                    <span class="file-name">{{ selectedFile?.name }}</span>
+                    <div class="error">
                     <mat-error *ngIf="form.get('image')?.hasError('required') && form.get('image')?.touched">{{ "requiredImageProduct" | translate }}</mat-error>
+                </div>
                 </div>
             </div>
 
