--- a/frontend-bar/src/app/components/products/list-product/list-product.component.html
+++ b/frontend-bar/src/app/components/products/list-product/list-product.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<h1 class="title">{{ "navProduct" | translate }}</h1>
 <section>
     <div class="mat-elevation-z8">
         <div class="search_add">
