--- a/frontend-bar/src/app/components/table/list-table/list-table.component.css
+++ b/frontend-bar/src/app/components/table/list-table/list-table.component.css
@@ -1,3 +1,13 @@
+.title{
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+}
+.title{
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+}
 table {
     width: 100%;
 }
