style-img-product

--- a/frontend-bar/src/app/components/table/list-table/list-table.component.html
+++ b/frontend-bar/src/app/components/table/list-table/list-table.component.html
@@ -17,7 +17,7 @@
 
             <!-- Name Column -->
             <ng-container matColumnDef="name_table">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "name" | translate }}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameTable" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.name_table }}</td>
             </ng-container>
 
