--- a/frontend-bar/src/app/components/navbar/navbar.component.html
+++ b/frontend-bar/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
         <fa-icon [icon]="iconMenu" id="manu_hamb"></fa-icon>
     </div>
     <div class="logo_nav">
-        <a href=""><img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo"></a>
+       <img src="../../../../assets/img/LOGO BAR/bran2-01.png" alt="Logo">
     </div>
 
 </nav>
