--- a/frontend-bar/src/app/components/products/list-product/list-product.component.css
+++ b/frontend-bar/src/app/components/products/list-product/list-product.component.css
@@ -43,3 +43,11 @@ td mat-icon{
     height: auto;
     text-align: center;
 }
+table img{
+    width: 150px;
+    height: 100px;
+    object-fit: contain;
+    margin: 8px;
+}
+
+  
