--- a/frontend-bar/src/app/components/user/list-user/list-user.component.html
+++ b/frontend-bar/src/app/components/user/list-user/list-user.component.html
@@ -18,7 +18,7 @@
 
             <!-- Name Column -->
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "name" | translate }}</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "nameUser" | translate }}</th>
                 <td mat-cell *matCellDef="let element">{{ element.name }}</td>
             </ng-container>
 
