button-add-styles

--- a/frontend-bar/src/app/components/event/list-event/list-event.component.html
+++ b/frontend-bar/src/app/components/event/list-event/list-event.component.html
@@ -8,7 +8,7 @@
                 <mat-label>{{ "filter" | translate }}</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
-            <button (click)="addEvent()" mat-flat-button color="primary"><mat-icon>add</mat-icon></button>
+            <button (click)="addEvent()" mat-flat-button color="primary" class="add_"><mat-icon >add</mat-icon></button>
         </div>
 
         <table mat-table [dataSource]="dataSource" matSort>
