--- a/frontend-bar/src/app/components/products/list-product/list-product.component.html
+++ b/frontend-bar/src/app/components/products/list-product/list-product.component.html
@@ -9,8 +9,8 @@
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
             <!-- <button (click)="addUser()" mat-flat-button color="primary">{{ "add" | translate }}</button> -->
-            <button (click)="addProduct()" mat-flat-button color="primary">
-                <mat-icon class="btn-delete">add</mat-icon>
+            <button (click)="addProduct()" mat-flat-button color="primary" class="add_">
+                <mat-icon>add</mat-icon>
             </button>
         </div>
 
