--- a/frontend-bar/src/app/components/user/list-user/list-user.component.css
+++ b/frontend-bar/src/app/components/user/list-user/list-user.component.css
@@ -43,4 +43,9 @@ td mat-icon{
     width: auto;
     height: auto;
     text-align: center;
+    color: white !important;
+}
+
+.add_{
+    color: #FFFFFF !important;
 }
