--- a/frontend-bar/src/app/components/status/list-status/list-status.component.html
+++ b/frontend-bar/src/app/components/status/list-status/list-status.component.html
@@ -8,7 +8,7 @@
                 <mat-label>Filter</mat-label>
                 <input matInput #input (keyup)="eventFilter($event)">
             </mat-form-field>
-            <button (click)="addStatus()" mat-flat-button color="primary">
+            <button (click)="addStatus()" mat-flat-button color="primary" class="add_">
                 <mat-icon>add</mat-icon>
             </button>
         </div>
